gnome-shell: Fix app-view-control button spacing
Remove margin from between the 'Favorites | All' overview icon grid
buttons, that was added in the following upstream commit:
https://gitlab.gnome.org/GNOME/gnome-shell/commit/44e1a6ce06c26cb9d74a5b8d0bdf11797585d44b

--- a/common/gnome-shell/3.34/sass/_common.scss
+++ b/common/gnome-shell/3.34/sass/_common.scss
@@ -1905,6 +1905,7 @@ StScrollBar {
 //favorties | all toggle button
 .app-view-control {
   padding: 4px 32px;
+  margin: 0;
 
   @include button(osd);
 
